--- a/src/app/src/main/res/layout/activity_main.xml
+++ b/src/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
   android:orientation="vertical">
 
   <WebView
-    android:id="@+id/webview"
-    android:layout_width="match_content"
+    android:id="@+id/webView"
+    android:layout_width="wrap_content"
     android:layout_height="280dp"/>
 
   <TextView
-    android:id="@+id/textview"
-    android:layout_width="match_content"
+    android:id="@+id/textView"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     tools:text="Hello World!"
