--- a/src/app/src/main/res/layout/activity_main.xml
+++ b/src/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
   <WebView
     android:id="@+id/webView"
     android:layout_width="wrap_content"
-    android:layout_height="280dp"/>
+    android:layout_height="367dp"/>
+    <!-- android:layout_height="367dp"/> -->
 
   <TextView
     android:id="@+id/textView"
