--- a/src/app/src/main/assets/index.html
+++ b/src/app/src/main/assets/index.html
@@ -33,21 +33,8 @@
   </footer>
   <!-- js -->
   <script>
-    const log = console.log;
-    const input = document.querySelector(`#input`);
-    const btn = document.querySelector(`#button`);
-    btn.addEventListener(`click`, (e) => {
-      const value = input.value;
-      log(`value =`, value);
-      // alert(value);
-      setTimeout(() => {
-        autoFillInput(`xgqfrms`);
-      }, 0);
-    });
-    function autoFillInput(str = ``) {
-      input.value = str;
-    }
+    //
   </script>
-  <!-- <script src="./app.js"></script> -->
+  <script src="./app.js"></script>
 </body>
 </html>
